--- a/css/main.css
+++ b/css/main.css
@@ -117,12 +117,31 @@ button:focus {
 }
 
 .title {
-    font-family: "Segoe UI Gras";
+    /* font-family: "Segoe UI Gras"; */
     font-style: normal;
     font-weight: 900;
     font-size: 65px;
     line-height: 105%;
     margin-bottom: 80px;
+    text-align: center;
+}
+@media (max-width: 991px) {
+    .title {
+        font-size: 47px;
+        margin-bottom: 50px;
+    }
+}
+@media (max-width: 768px) {
+    .title {
+        font-size: 40px;
+        text-align: start;
+    }
+}
+@media (max-width: 575px) {
+    .title {
+        font-size: 30px;
+        margin-bottom: 35px;
+    }
 }
 .color-violet {
     color: #7f2ae4;
@@ -169,7 +188,7 @@ button:focus {
     background-image: url(../img/1-header/header-bgc.png);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position-y: top;
+    background-position-y: -45px;
     padding-top: 140px;
     padding-bottom: 77px;
 }
@@ -211,9 +230,92 @@ button:focus {
 /* header */
 
 /* advantages */
+.advantages {
+    padding: 50px 0 165px;
+}
+.advantages-block {
+    margin-bottom: 58px;
+}
+.advantages-number {
+    max-width: 280px;
+    width: 100%;
+}
+.advantages-number__title {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 100%;
+}
+.advantages-number__text {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+}
+.active-element {
+    height: 8.5px;
+    width: 8.5px;
+    background-color: #9d9b9b;
+    border-radius: 50%;
+}
+.active-element__violet {
+    height: 14px;
+    width: 14px;
+    background-color: #7f2ae4;
+}
 /* advantages */
 
 /* about-us */
+.abouts-us {
+    padding: 147px 0 163px;
+    background-color: #f4f9ff;
+}
+.abouts-us-img {
+    margin-left: 90px;
+}
+.title-bout-us {
+    top: 185px;
+    transform: rotate(-90deg) translateY(-100%);
+}
+.abous-us__text {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 130.19%;
+    max-width: 830px;
+    margin-bottom: 122px;
+}
+.about-us__number__element {
+    position: relative;
+}
+.about-us__number__element::before {
+    position: absolute;
+    content: "";
+    display: block;
+    width: 1.5px;
+    height: 65px;
+    background-color: #000000;
+    right: -20px;
+    top: 10px;
+}
+.about-us__number__element:last-child::before {
+    display: none;
+}
+.abous-us__element__title {
+    font-style: normal;
+    font-weight: 900;
+    font-size: 60px;
+    line-height: 72px;
+    letter-spacing: 0.02em;
+}
+.abous-us__element__text {
+    width: fit-content;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 22px;
+    line-height: 25px;
+    letter-spacing: 0.02em;
+}
 /* about-us */
 
 /* cases */
